# cleaf

./: .gitignore  CMakeLists.txt  README.md  USAGE.md  testMain.c
include/: cleaf.h  cleafconfig.h  cleafcore.h  leafcore_dist.h  loglevels.h
src/: cleaf.cpp  template.cpp
src/cleaf/: cleaf.cpp
src/cleafconfig/: cleafconfig.cpp  setRootDir.cpp
src/cleafcore/: a_install.cpp  a_upgrade.cpp  cleafcore.cpp  parseInstalled.cpp  readPackageList.cpp
src/leafcore_dist/: e_feature_missing.cpp  getSet.cpp
